--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.0</version>
+    <version>3.4.3</version>
     <relativePath/>
   </parent>
 
-  <groupId>com.blades.frontend</groupId>
+  <groupId>com.blades</groupId>
   <artifactId>blades</artifactId>
   <version>${revision}</version>
   <packaging>pom</packaging>
