--- a/adapter/in/pom.xml
+++ b/adapter/in/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.blades.frontend</groupId>
+    <groupId>com.blades</groupId>
     <artifactId>blades</artifactId>
     <version>${revision}</version>
     <relativePath>../../pom.xml</relativePath>
@@ -43,10 +43,14 @@
       <artifactId>spring-webmvc</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.blades.frontend</groupId>
+      <groupId>com.samskivert</groupId>
+      <artifactId>jmustache</artifactId>
+      <version>1.16</version>
+    </dependency>
+    <dependency>
+      <groupId>com.blades</groupId>
       <artifactId>api</artifactId>
       <version>${revision}</version>
-      <scope>compile</scope>
     </dependency>
 
     <dependency>
