Use common properties, fix radio buttons, and add remaining character types

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,6 @@ services:
       - blades-db
     environment:
       - SPRING_DATA_MONGODB_HOST=bladesDB
+      - SPRING_DATA_MONGODB_URI=mongodb://localhost:27017
     ports:
       - "8080:8080"
