--- a/adapter/in/src/main/resources/properties/character.properties
+++ b/adapter/in/src/main/resources/properties/character.properties
@@ -1,3 +1,4 @@
+#######Show character#######
 character.title=Characters
 character.name=Name
 
@@ -5,7 +6,6 @@ character.alias=Alias
 character.alias.none=No alias
 
 character.type=Character type
-character.type.LURK=Lurk
 character.type.none=No type
 
 character.crewName=Crew name
@@ -15,35 +15,15 @@ character.look=Look
 character.look.none=No look
 
 character.heritage=Heritage
-character.heritage.AKROS=Akros
-character.heritage.THE_DAGGER_ISLES=The Dagger Isles
-character.heritage.IRUVIA=Iruvia
-character.heritage.SEVEROS=Severos
-character.heritage.SKOVLAN=Skovlan
-character.heritage.TYCHEROS=Tycheros
 character.heritage.none=No heritage
 
 character.background=Background
-character.background.ACADEMIC=Academic
-character.background.LABOR=Labor
-character.background.LAW=Law
-character.background.TRADE=Trace
-character.background.MILITARY=Military
-character.background.NOBLE=Noble
-character.background.UNDERWORLD=Underworld
 character.background.none=No background
 
 character.backgroundDetails=Background details
 character.backgroundDetails.none=No background details
 
 character.vice=Vice
-character.vice.FAITH=Faith
-character.vice.GAMBLING=Gambling
-character.vice.LUXURY=Luxury
-character.vice.OBLIGATION=Obligation
-character.vice.PLEASURE=Pleasure
-character.vice.STUPOR=Stupor
-character.vice.WEIRD=Weird
 character.vice.none=No vice
 
 character.viceDetails=Vice details
@@ -51,90 +31,66 @@ character.viceDetails.none=No vice details
 
 character.create=Create new character
 
-
+#######Character create#######
 character.create.title=Create character
 character.create.name.question=What is your character's name?
 character.create.alias.question=What is your character's alias?
-
 character.create.characterType.question=What is your character's type?
-character.create.LURK=Lurk
-
 character.create.crewName.question=What is your crew's name?
 character.create.look.question=What is your character's look?
-
 character.create.heritage.question=What is your character's heritage?
-character.create.AKROS=Akros
-character.create.THE_DAGGER_ISLES=The Dagger Isles
-character.create.IRUVIA=Iruvia
-character.create.SEVEROS=Severos
-character.create.SKOVLAN=Skovlan
-character.create.TYCHEROS=Tycheros
-
 character.create.background.question=What is your character's background?
-character.create.ACADEMIC=Academic
-character.create.LABOR=Labor
-character.create.LAW=Law
-character.create.TRADE=Trace
-character.create.MILITARY=Military
-character.create.NOBLE=Noble
-character.create.UNDERWORLD=Underworld
-
 character.create.backgroundDetails.question=What's a description of this heritage?
-
 character.create.vice.question=What is your character's vice?
-character.create.FAITH=Faith
-character.create.GAMBLING=Gambling
-character.create.LUXURY=Luxury
-character.create.OBLIGATION=Obligation
-character.create.PLEASURE=Pleasure
-character.create.STUPOR=Stupor
-character.create.WEIRD=Weird
-
 character.create.viceDetails.question=What's a description of this vice?
 
-
+#######Character change#######
 character.change.changeElement.question=What are you changing %s''s %s to?
 character.change.NAME=name
 character.change.ALIAS=alias
-
 character.change.TYPE=type
-character.change.LURK=Lurk
-
 character.change.CREW_NAME=crew name
 character.change.LOOK=look
-
 character.change.HERITAGE=heritage
-character.change.AKROS=Akros
-character.change.THE_DAGGER_ISLES=The Dagger Isles
-character.change.IRUVIA=Iruvia
-character.change.SEVEROS=Severos
-character.change.SKOVLAN=Skovlan
-character.change.TYCHEROS=Tycheros
-
 character.change.BACKGROUND=background
-character.change.ACADEMIC=Academic
-character.change.LABOR=Labor
-character.change.LAW=Law
-character.change.TRADE=Trace
-character.change.MILITARY=Military
-character.change.NOBLE=Noble
-character.change.UNDERWORLD=Underworld
-
 character.change.BACKGROUND_DETAILS=background details
-
 character.change.VICE=vice
-character.change.FAITH=Faith
-character.change.GAMBLING=Gambling
-character.change.LUXURY=Luxury
-character.change.OBLIGATION=Obligation
-character.change.PLEASURE=Pleasure
-character.change.STUPOR=Stupor
-character.change.WEIRD=Weird
-
 character.change.VICE_DETAILS=vice details
 
-
-
+#######Character delete#######
 character.delete.title=Are you sure you want to delete %s?
 
+#type
+CUTTER=Cutter
+HOUND=Hound
+LEECH=Leech
+LURK=Lurk
+SLIDE=Slide
+SPIDER=Spider
+WHISPER=Whisper
 
+#heritage
+AKROS=Akros
+THE_DAGGER_ISLES=The Dagger Isles
+IRUVIA=Iruvia
+SEVEROS=Severos
+SKOVLAN=Skovlan
+TYCHEROS=Tycheros
+
+#background
+ACADEMIC=Academic
+LABOR=Labor
+LAW=Law
+TRADE=Trace
+MILITARY=Military
+NOBLE=Noble
+UNDERWORLD=Underworld
+
+#vice
+FAITH=Faith
+GAMBLING=Gambling
+LUXURY=Luxury
+OBLIGATION=Obligation
+PLEASURE=Pleasure
+STUPOR=Stupor
+WEIRD=Weird
