Add errors and previous answers

--- a/adapter/in/src/main/resources/properties/character.properties
+++ b/adapter/in/src/main/resources/properties/character.properties
@@ -57,6 +57,17 @@ character.change.BACKGROUND_DETAILS=background details
 character.change.VICE=vice
 character.change.VICE_DETAILS=vice details
 
+character.change.no.value.NAME=Enter a name
+character.change.no.value.ALIAS=Enter an alias
+character.change.no.value.TYPE=Select a type
+character.change.no.value.CREW_NAME=Enter a crew name
+character.change.no.value.LOOK=Enter a look
+character.change.no.value.HERITAGE=Select a heritage
+character.change.no.value.BACKGROUND=Select a background
+character.change.no.value.BACKGROUND_DETAILS=Enter background details
+character.change.no.value.VICE=Select a vice
+character.change.no.value.VICE_DETAILS=Enter vice details
+
 #######Character delete#######
 character.delete.title=Are you sure you want to delete %s?
 
