--- a/adapter/in/src/main/resources/properties/crew.properties
+++ b/adapter/in/src/main/resources/properties/crew.properties
@@ -2,6 +2,9 @@
 crew.title=Crews
 crew.crewName=Crew name
 
+crew.characterIds=Characters in crew
+crew.characterIds.none=No characters
+
 crew.lair=Lair
 crew.lair.none=No lair
 
@@ -19,10 +22,12 @@ crew.create.lairDetails.question=What's a description of this lair?
 #######Crew change#######
 crew.change.changeElement.question=What are you changing %s''s %s to?
 crew.change.CREW_NAME=crew name
+crew.change.CHARACTER_IDS=character set
 crew.change.LAIR=lair
 crew.change.LAIR_DETAILS=lair details
 
 crew.change.no.value.CREW_NAME=Enter a crew name
+crew.change.no.value.CHARACTER_IDS=Select at least one character
 crew.change.no.value.LAIR=Enter a lair name
 crew.change.no.value.LAIR_DETAILS=Enter lair details
 
