Add crew - better

--- a/adapter/in/src/main/resources/properties/character.properties
+++ b/adapter/in/src/main/resources/properties/character.properties
@@ -49,7 +49,7 @@ character.change.changeElement.question=What are you changing %s''s %s to?
 character.change.NAME=name
 character.change.ALIAS=alias
 character.change.TYPE=type
-character.change.CREW_NAME=crew name
+character.change.CREW_NAME=crew
 character.change.LOOK=look
 character.change.HERITAGE=heritage
 character.change.BACKGROUND=background
